fix: leave group
